// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`detail reducer #detail should return the \`INSERT_UPDATE_POST\` set input value 1`] = `Object {}`;

exports[`detail reducer #detail should return the \`INSERT_UPDATE_POST\` state 1`] = `Object {}`;

exports[`detail reducer #detail should return the initial state by default 1`] = `Object {}`;

exports[`detail reducer #error should return the \`"POST_ERROR"\` set [object Object] input value 1`] = `
Object {
  "message": "POST_ERROR--Messages",
}
`;

exports[`detail reducer #error should return the \`"POST_GET_ERROR"\` set [object Object] input value 1`] = `
Object {
  "message": "POST_GET_ERROR--Messages",
}
`;

exports[`detail reducer #error should return the \`undefined\` set [object Object] input value 1`] = `
Object {
  "message": "POST_GET_ERROR--Messages",
}
`;

exports[`detail reducer #error should return the \`undefined\` set [object Object] input value 2`] = `
Object {
  "message": "POST_ERROR--Messages",
}
`;

exports[`detail reducer #error should return the initial state by default 1`] = `Object {}`;

exports[`detail reducer #loading should return the initial state by default 1`] = `
Object {
  "body": "",
  "id": null,
  "title": "",
  "userId": null,
}
`;
